# BadDog

./: CMakeLists.txt  GetDependencies.cmake  README.md
.github/workflows/: cmake.yml
assets/JSON/Levels/: TestLevel.json  TestLevel2.json
assets/JSON/SpriteSheets/: SpriteSheets.json
assets/JSON/TypeDefs/: CollidableSubTraits.json  StatusEffects.json
doc/: EntityClassDiagram.plantuml  GraphicsClassDiagram.plantuml  TODO.txt  WhereILeftOffLast.txt
src/: CMakeLists.txt  Game.cpp  Game.hpp  GameState.hpp  GlobalState.hpp  ProjectDefs.hpp  main.cpp
src/Command/: CMakeLists.txt  Command.hpp  InitJump.cpp  InitJump.hpp  InitMoveLeft.cpp  InitMoveLeft.hpp  InitMoveRight.cpp  InitMoveRight.hpp  NullCommand.cpp  NullCommand.hpp  StopMoveLeft.cpp  StopMoveLeft.hpp  StopMoveRight.cpp  StopMoveRight.hpp
src/Common/: CMakeLists.txt  FileSystem.hpp  GameSettings.hpp  GameState.hpp  IEngine.hpp  ILogicEngine.hpp  ProjectConcepts.hpp  ProjectDefaults.hpp  ProjectDefs.hpp  ProjectMacros.hpp  ProjectTypes.cpp  ProjectTypes.hpp
src/Common/Engines/: CMakeLists.txt
src/Common/Entities/: CMakeLists.txt  EntityIdManager.cpp  EntityIdManager.hpp  EntityTypes.hpp  EntityUtilities.hpp
src/Common/EventPublisher/: EventPublisher.hpp  EventPublisher.inl
src/Common/Events/: CMakeLists.txt  EventPublisher.hpp  EventPublisher.inl  EventTypes.hpp
src/Common/JSON/: CMakeLists.txt  JsonDefs.hpp  JsonFileReader.cpp  JsonFileReader.hpp  JsonTypes.hpp  JsonUtilities.hpp
src/Common/Logging/: CMakeLists.txt  Logger.hpp
src/Common/Queues/: CMakeLists.txt  ImmediateQueue.hpp  Queue.hpp
src/Common/SpatialHashMap/: CMakeLists.txt  SpatialHashMap.cpp  SpatialHashMap.hpp
src/Common/Utilities/: CMakeLists.txt  ExtendedOptional.hpp  RandomNumberGenerator.hpp
src/ControlScheme/: CMakeLists.txt  ControlScheme.hpp  StdKeyBoardCtrlScheme.cpp  StdKeyBoardCtrlScheme.hpp
src/Game/: CMakeLists.txt  GameEngine.cpp  GameEngine.hpp  GameLevel.cpp  GameLevel.hpp  GameLevelLoader.cpp  GameLevelLoader.hpp  GameSettings.hpp  GameState.cpp  GameState.hpp
src/Game/GameEntities/: CMakeLists.txt  GameEntityDefs.hpp  StaticEntity.cpp  StaticEntity.hpp  StaticEntityTypes.hpp  StationaryDynamicEntity.hpp
src/Game/GameLevels/: CMakeLists.txt  GameLevel.cpp  GameLevel.hpp  TestLevel.cpp  TestLevel.hpp
src/Gameplay/: CMakeLists.txt  GameplayEngine.cpp  GameplayEngine.hpp
src/Graphics/: CMakeLists.txt  Camera.cpp  Camera.hpp  GameGraphics.cpp  GameGraphics.hpp  GraphicsDefs.cpp  GraphicsDefs.hpp  GraphicsEngine.cpp  GraphicsEngine.hpp  RenderInstructionFactory.hpp  Renderer.cpp  Renderer.hpp  RgbaColor.hpp  SpriteSheet.hpp  Surface.cpp  Surface.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp
src/JSONParsers/: CMakeLists.txt  JsonDefs.cpp  JsonDefs.hpp  JsonFileReader.hpp  JsonLevelParser.cpp  JsonLevelParser.hpp  JsonUtilities.hpp
src/Logging/: Logger.hpp
src/Physics/: CMakeLists.txt  CollisionDetector.cpp  CollisionDetector.hpp  PhysicsDefs.cpp  PhysicsDefs.hpp  PhysicsEngine.cpp  PhysicsEngine.hpp  PhysicsEventTypes.hpp  SpatialHashMap.cpp  SpatialHashMap.hpp
src/Physics/CollisionDetection/: CMakeLists.txt  CollisionDetector.cpp  CollisionDetector.hpp  SpatialHashMap.hpp
src/Physics/CollisionHandling/: CMakeLists.txt  CollisionDetector.cpp  CollisionDetector.hpp  CollisionResolver.hpp  SpatialHashMap.cpp  SpatialHashMap.hpp  SpatialHashMap.inl  xxISpatialHashMap.hpp
src/UserInput/: CMakeLists.txt  UserInputDefs.hpp  UserInputEngine.cpp  UserInputEngine.hpp
src/__ToBeRemoved/: GameEventTypes.hpp  GraphicsDefs.hpp  PhysicsDefs.cpp  PhysicsDefs.hpp  PhysicsEventTypes.hpp  ProjectDefs.hpp  RenderInstructionFactory.hpp  RgbaColor.cpp  RgbaColor.hpp  SpriteSheet.inl  xxSpatialHashMap.hpp  xxSpatialHashMap.inl
src/__ToBeRemoved/GameEntities/: CMakeLists.txt  StaticEntity.hpp  StationaryDynamicEntityTypes.hpp
src/__ToBeRemoved/GameLevels/: CMakeLists.txt  GameLevel.cpp  GameLevel.hpp
tests/: CMakeLists.txt  TestCamera.cpp  TestCollisionDetector.cpp  TestEntityIdManager.cpp  TestEntityUtilities.cpp  TestEventPublisher.cpp  TestGameEngine.cpp  TestGameLevel.cpp  TestGameLevelLoader.cpp  TestGameState.cpp  TestGraphicsDefs.cpp  TestJsonFileReader.cpp  TestJsonParsers.cpp  TestQueues.cpp  TestRenderer.cpp  TestSpatialHashMap.cpp  TestSurface.cpp  TestTestLevel.cpp  TestTexture.cpp  TestUtilities.cpp  TestWindow.cpp  xxTestSpatialHashMap.cpp
tests/__ToBeRemoved/: TestGameLevel.cpp  TestGameState.cpp  TestJsonParsers.cpp
